@startuml
title Entity-Relationship Diagram

hide methods
hide stereotypes
skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho

entity users {
  * id : char(36) <<PK>>
  --
  name : varchar(120)
  email : varchar(180) <<UQ>>
  password_hash : varchar(255)
  role : varchar(40)
}

entity user_profiles {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK, UQ>>
  age : int
  gender : varchar(40)
  height_cm : double
  weight_kg : double
  activity_level : varchar(60)
  primary_goal : varchar(80)
}

entity exercises {
  * id : char(36) <<PK>>
  --
  name : varchar(140)
  category : varchar(80)
  muscle_group : varchar(80)
  equipment : varchar(80)
  intensity_level : varchar(60)
}

entity workout_sessions {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  workout_date : datetime
  category : varchar(80)
  duration_min : int
  notes : text
}

entity workout_entries {
  * id : char(36) <<PK>>
  --
  session_id : char(36) <<FK>>
  exercise_id : char(36) <<FK>>
  sets : int
  reps : int
  weight_kg : double
  rest_sec : int
}

entity food_items {
  * id : char(36) <<PK>>
  --
  name : varchar(140)
  serving_size : varchar(80)
  calories : double
  protein : double
  carbohydrates : double
  fat : double
  sugar : double
  sodium : double
}

entity meal_logs {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  food_item_id : char(36) <<FK>>
  meal_type : varchar(60)
  quantity : double
  meal_time : datetime
  total_calories : double
  total_protein : double
  total_carbs : double
  total_fat : double
}

entity body_records {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  record_date : datetime
  weight_kg : double
  note : text
}

entity goals {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  goal_type : varchar(80)
  target_metric : varchar(80)
  target_value : double
  deadline : datetime
  priority : varchar(40)
  status : varchar(40)
}

entity goal_milestones {
  * id : char(36) <<PK>>
  --
  goal_id : char(36) <<FK>>
  title : varchar(140)
  target_value : double
  due_date : datetime
  completed : boolean
}

entity analytics_snapshots {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  period_type : varchar(40)
  start_date : datetime
  end_date : datetime
  workout_consistency : double
  training_volume : double
  calorie_intake : double
  calorie_balance : double
  goal_adherence : double
  weight_trend : varchar(80)
}

entity ai_recommendations {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  type : varchar(60)
  prompt_context : text
  content : text
}

entity recommendation_feedback {
  * id : char(36) <<PK>>
  --
  recommendation_id : char(36) <<FK>>
  rating : varchar(40)
  suitability : varchar(80)
  comment : text
}

entity progress_reports {
  * id : char(36) <<PK>>
  --
  user_id : char(36) <<FK>>
  period_type : varchar(40)
  generated_at : datetime
  summary : text
  file_url : varchar(255)
}

users ||--o| user_profiles
users ||--o{ workout_sessions
workout_sessions ||--o{ workout_entries
exercises ||--o{ workout_entries
users ||--o{ meal_logs
food_items ||--o{ meal_logs
users ||--o{ body_records
users ||--o{ goals
goals ||--o{ goal_milestones
users ||--o{ analytics_snapshots
users ||--o{ ai_recommendations
ai_recommendations ||--o{ recommendation_feedback
users ||--o{ progress_reports
@enduml
